{
    "name": "GameControls",
    "maps": [
        {
            "name": "Swipe",
            "id": "8067f8ce-c04a-4a77-900c-81b958f2f2e8",
            "actions": [
                {
                    "name": "PrimaryContact",
                    "type": "PassThrough",
                    "id": "8382adfb-94ba-4c82-b7b3-ca4bc2fd6339",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "PrimaryPosition",
                    "type": "PassThrough",
                    "id": "588f27d7-0106-4682-9fe1-bb20deaaa247",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5881693a-9d83-44ba-bd0f-67958af455ba",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3ffbf520-85bc-4c30-8650-b6b7f64ed267",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}